# rhi

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  test_path.c  v0.review.md
.github/workflows/: build.yml
.specstory/: .project.json
docs/: api.md  arch.md  build.md  pitfalls.md  report.md  roadmap.md
docs/research/: features.md  shader.md  with sdl.md
docs/tasks/: T-V0-Bootstrap.md  T-V1.0-RHI-Foundation.md  T-V1.1-Bindless.md  T-V1.2-GPU-Driven.md  T-V1.3-Async-Compute.md  T-V1.4-MultiThread.md  T-V1.5-Shader-Pipeline.md  T-V1.6-RenderGraph.md  T-V1.7-Mobile-Web.md  T-V2-Advanced-GPU.md  T-V3-RT-Neural-Plugins.md
examples/HelloWorld/: CMakeLists.txt  main.c
examples/HelloWorld/shaders/: tri-frag.dxil  tri-frag.spv  tri-vert.dxil  tri-vert.spv  tri.slang
modules/plugins/: CMakeLists.txt
modules/plugins/include/plugins/: plugins.h
modules/render/: CMakeLists.txt
modules/render/include/render/: render.h
modules/rhi/: CMakeLists.txt
modules/rhi/include/rhi/: defs.h  rhi.h
modules/rhi/src/: rhi.c  rhi_internal.h
modules/shader/: CMakeLists.txt
modules/shader/include/shader/: compiler.h
modules/shader/src/: compiler.cpp
tools/shader_compiler/: compile.py
